fix nav size on tablet and ipad

--- a/css/app.css
+++ b/css/app.css
@@ -354,10 +354,13 @@ option{
 /* For Tablets */
 @media screen and (min-width:768px) and (max-width:1279px) {
     .nav-bar{
-        padding: 1rem 2rem;
+        padding: 0.5rem 2rem 0 2rem;
+    }
+    .logo{
+        width:50%;
     }
     #slack-logo{
-        width: 50%;
+        width: 35%;
     }
     .menus{
         display: none;
@@ -373,7 +376,7 @@ option{
         border: none;
     }
     #icon img{
-        width: 3rem;
+        width: 2rem;
     }
     
     /* header */
